k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gym-system
  labels:
    app: gym-it-system
    managed-by: shattyk-kuziyeva
